2005-08-20  John Luke  <john.luke@gmail.com>

	* Commands/CommandFrame.cs:
	* Commands/MenuToolButton.cs:
	* Commands/CommandManager.cs: fix some warning
	with the new gtk#

2005-08-18  Lluis Sanchez Gual  <lluis@novell.com>

	* TabLabel/TabLabel.cs:
	* Makefile.am: Added MonoDevelop.Close.png as a resource.

2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

    * MonoDevelop.Gui.Widgets.mdp: references update

2005-08-06  John Luke  <john.luke@gmail.com>

    * MonoDevelop.Gui.Widgets.mdp: update

2005-08-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Tree/TreeNodeCollection.cs:
	* Tree/TreeNode.cs:
	* Tree/TreeView.cs: Removed.

	* Commands/ActionCommand.cs: Added constructor overload.
	* Commands/CommandManager.cs: Added some overloads and helper methods.
	
	* Commands/CommandArrayInfo.cs:
	* Commands/CommandInfo.cs:
	* Commands/CommandMenuItem.cs: Allow separators in command arrays.
	* Commands/LocalCommandEntry.cs: New kind of command entry, which
	automatically registers a command if not previously registered.

2005-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/CommandManager.cs: Improve error message when an exception is
	thrown while executing a command.

2005-07-13  Lluis Sanchez Gual  <lluis@novell.com>

	* BasicChart/*: A simple chart widget.

2005-07-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/ICommandDelegatorRouter.cs: New command routing interface.
	* Commands/CommandRouterContainer: An implementation of
	ICommandDelegatorRouter.
	* Commands/CommandManager.cs: Implemented support for
	ICommandDelegatorRouter.

2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (FILES): Move AssemblyInfo.cs ...
	(GENERATED_FILES): ... here.

2005-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* DockToolbars/*: Docking toolbars!
	
	* Commands/Command.cs: Command should be abstract.
	* Commands/CommandToolbar.cs: This now is a dockable toolbar.
	* Commands/CommandManager.cs: Register commands from CommandSystemCommands.