@@ -1,3 +1,7 @@
+2005-08-23  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Commands/CommandManager.cs: Added EnableIdleUpdate property.
+
 2005-08-20  John Luke  <john.luke@gmail.com>
 
 	* Commands/CommandFrame.cs:
